--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,9 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11765081.md#1">中国工程院院士李宁涉贪被判刑12年</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764759.md#1">涉权色交易私藏枪支 长沙银行前副行长被双开</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟宣告灭绝</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764556.md#1">【翻墙必看】分析：川普击碎中共的拖延术</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764633.md#1">放弃百万年薪 港精算师向旅客讲香港故事</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764609.md#1">美空袭击毙伊朗将军 五角大楼：川普下令</a><br>
@@ -39,14 +42,15 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763785.md#1">7.21警黑勾结 中共鼓励港警流氓化</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756637.md#1">专访香港00后：我同学陈彦霖不会自杀</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11764223.md#1">中共“铁路大跃进”刺激经济将带来遗祸? ?</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761238.md#1">穿越非洲抵美 山东维权人士万里大逃亡（下）</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763989.md#1">大陆现史上年度最早地方债 1月预超8000亿</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763800.md#1">禁中共黑客盗窃 纳入美中第二阶段贸易谈判</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764982.md#1">涉黑并贪腐逾亿 吉林市政协前主席获刑20年</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764921.md#1">中国滑雪队令挪威图书馆下架法轮功书籍遭拒</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764605.md#1">贸易战加资本寒冬 大陆科技界面临更大动荡</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764573.md#1">郴州妈妈与新生儿死亡 家属拟申请医疗鉴定</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761238.md#1">穿越非洲抵美 山东维权人士万里大逃亡（下）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11764071.md#1">华谊老板致员工信责影视团队：失误堪称致命</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763655.md#1">林夕歌曲作词人变佚名 网民斥中共电视台无耻</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763989.md#1">大陆现史上年度最早地方债 1月预超8000亿</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763800.md#1">禁中共黑客盗窃 纳入美中第二阶段贸易谈判</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763973.md#1">盘点2019美国经济 进入史上最长增长期</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763959.md#1">2020脱贫年 中共多地强制脱贫丑闻百出</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
@@ -84,16 +88,12 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761310.md#1">美国专家：中国问题将成总统大选焦点</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761112.md#1">川普：希望在第二阶段协议完成贸易谈判</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761329.md#1">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761290.md#1">山西老板遗书曝光  控诉滴滴黑车垄断</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11714048.md#1">60国海外法轮功学员恭祝李洪志师父新年好</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761249.md#1">港民新年诉求不变 坚持反暴政不会退缩</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761256.md#1">中国华融债务危机 恐引台湾30档基金爆雷</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ublry267/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761187.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/003FotoJet_meitu_1-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761187.md#1">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br>2020年的平安夜，山东维权人士界立健 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750457.md#1">【新闻看点】新年祝福 全球网友寄语香港</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760052.md#1">上海老妇死于维权路 女儿为母伸冤</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759400.md#1">2019岁末 民间记者会给港人的一封信</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761021.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP-construction-site-labors-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761021.md#1">展望2020大陆经济：“三驾马车”全瘫</a><br>新年伊始，大陆经济前景令人担忧，经 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760857.md#1">举债支撑 中共央行降准放水8000亿</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759062.md#1">偷带癌症研究材料出境 中国学生在美被控罪</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11759016.md#1">海航董事长承认拖欠工资 资金困境未解</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758999.md#1">华为2019动荡不安 2020面临四大困境</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752263.md#1">【2019盘点】华人关注的十大新闻</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760983.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494134-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760983.md#1">美中第二阶段贸易谈判 一个重中之重议题</a><br>中美贸易战目前只是暂时休战，并未停 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728046.md#1">【思想领袖】专访邵岚：港警接令刺激抗议者</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759086.md#1">【十字路口】反渗透法过关 3疑点曝中共心慌</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760383.md#1">林郑 港警 何君尧入选“年度可耻人物”三甲</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6045186f3f335_ttl7dayhOQ________________-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1">武汉飞抵台湾航班 检疫人员登机检疫</a><br>湖北武汉近日爆发“不明病毒性肺炎” ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760885.md#1">武汉肺炎疫情 8人发帖遭传唤 引发网络不满</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760324.md#1">爆发不明肺炎疫情 武汉海鲜批发市场休市</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759473.md#1">2020新年首日四川自贡现4.3级地震</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759388.md#1">新年前一天松原现3个“太阳” 网民热议</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/bkn-20200102013431208-0102_00952_001_01p-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>山西晋城市一条在建隧道12月30日发生 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764636.md#1">每日三退声明精选（2020/01/02）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759266.md#1">特鲁多认为逮捕孟晚舟正确 美国力挺</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760571.md#1">学者：反渗透法照妖镜 大师链撤离台湾</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759620.md#1">中央美院教授被举报性骚扰多名女生</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748178.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播回放】新唐人电视台2020跨年缤纷夜</a><br>新唐人电视台特别企划《2020跨年缤纷 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>中共当局曾夸海口：“2020全面奔小康 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11714048.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/A51G6233-600x400-1-600x400-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11714048.md#1">60国海外法轮功学员恭祝李洪志师父新年好</a><br>在2020新年到来之际，60个国家和地区 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761249.md#1">港民新年诉求不变 坚持反暴政不会退缩</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761187.md#1">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750457.md#1">【新闻看点】新年祝福 全球网友寄语香港</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761290.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/08/GettyImages-463416074-1-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761290.md#1">山西老板遗书曝光  控诉滴滴黑车垄断</a><br>山西“好车容易”公司老板因公司陷入 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761256.md#1">中国华融债务危机 恐引台湾30档基金爆雷</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761021.md#1">展望2020大陆经济：“三驾马车”全瘫</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760857.md#1">举债支撑 中共央行降准放水8000亿</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759062.md#1">偷带癌症研究材料出境 中国学生在美被控罪</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11759016.md#1">海航董事长承认拖欠工资 资金困境未解</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760983.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494134-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760983.md#1">美中第二阶段贸易谈判 一个重中之重议题</a><br>中美贸易战目前只是暂时休战，并未停 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728046.md#1">【思想领袖】专访邵岚：港警接令刺激抗议者</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759086.md#1">【十字路口】反渗透法过关 3疑点曝中共心慌</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760383.md#1">林郑 港警 何君尧入选“年度可耻人物”三甲</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6045186f3f335_ttl7dayhOQ________________-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1">武汉飞抵台湾航班 检疫人员登机检疫</a><br>湖北武汉近日爆发“不明病毒性肺炎” ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760885.md#1">武汉肺炎疫情 8人发帖遭传唤 引发网络不满</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760324.md#1">爆发不明肺炎疫情 武汉海鲜批发市场休市</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759473.md#1">2020新年首日四川自贡现4.3级地震</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759388.md#1">新年前一天松原现3个“太阳” 网民热议</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/bkn-20200102013431208-0102_00952_001_01p-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>山西晋城市一条在建隧道12月30日发生 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764636.md#1">每日三退声明精选（2020/01/02）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759266.md#1">特鲁多认为逮捕孟晚舟正确 美国力挺</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760571.md#1">学者：反渗透法照妖镜 大师链撤离台湾</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759620.md#1">中央美院教授被举报性骚扰多名女生</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748178.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播回放】新唐人电视台2020跨年缤纷夜</a><br>新唐人电视台特别企划《2020跨年缤纷 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>中共当局曾夸海口：“2020全面奔小康 ...<br><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/ublry267/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,142,165 人
+- 共 349,148,338 人
 ```
 </strong>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
